# companies-house-api-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
examples/: simple.rs  stream.rs
src/: lib.rs
src/public_data/: mod.rs  unexpected_status.rs  unrecognised_response.rs
src/public_data/operation/: get_company_profile.rs  get_company_registered_office_address.rs  mod.rs  search_companies.rs  search_disqualified_officers.rs  search_officers.rs
src/public_data/types/: company_profile.rs  company_search.rs  disqualified_officer_search.rs  mod.rs  officer_search.rs  shared.rs
src/streaming/: client.rs  error.rs  mod.rs  stream_connection.rs
src/streaming/operation/: companies.rs  filings.rs  mod.rs
